test/error/let-malformed-binding.scm
;; let: malformed binding
(let ((a . 1)) #f)
